--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -153,7 +153,7 @@
                   <!-- <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" class="table table-striped table-bordered">
                   </table> -->
                   <div class="alert alert-info alert-dismissible fade show"  role="alert">
-                    <strong>Informacion!</strong> La información mostrada corresponde al año en transcurso.
+                    <strong>Informacion!</strong> Los datos mostrados corresponden al año en transcurso.
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
