--- a/app/comps/saldo/saldo.html
+++ b/app/comps/saldo/saldo.html
@@ -52,7 +52,7 @@
     <div class="card-body">
 
       <div class="row">
-        <div class="col-sm-12 col-md-6 col-lg-6">
+        <div class="col-sm-12 col-md-12 col-lg-12">
           <div class="form-check mb-3">
             <input class="form-check-input" type="radio" name="exampleRadios" ng-model="tipoBusqueda" id="exampleRadios1" ng-value="0" >
             <label class="form-check-label" for="exampleRadios1">
@@ -65,16 +65,18 @@
               Busqueda por componente activo
             </label>
           </div>
-          <label for="clientes">Busqueda por producto</label>
-          <div class="input-group mb-3">
-            <input type="text" class="form-control"  ng-model="busqueda_prod" placeholder="Busqueda por Producto" aria-label="Busqueda por Producto" aria-describedby="basic-addon2">
-            <div class="input-group-append">
-              <button class="btn btn-outline-secondary"   ng-click="getProdNew(true)" type="button">Buscar</button>
+          <div class="col-md-6">
+            <label for="clientes">Busqueda por producto</label>
+            <div class="input-group mb-3">
+              <input type="text" class="form-control"  ng-model="busqueda_prod" placeholder="Busqueda por Producto" aria-label="Busqueda por Producto" aria-describedby="basic-addon2">
+              <div class="input-group-append">
+                <button class="btn btn-outline-secondary"   ng-click="getProdNew(true)" type="button">Buscar</button>
+              </div>
             </div>
           </div>
 
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-3">
               <label for="proveedor">Filtrar por proveedor</label>
               <div class="input-group mb-3 ">
                 <div class="form-group">
