--- a/app/comps/saldo/saldo.html
+++ b/app/comps/saldo/saldo.html
@@ -68,7 +68,7 @@
 
           <div class="row">
             <div class="col-md-6">
-              <label for="clientes">Busqueda por producto</label>
+              <label for="clientes">Busqueda</label>
               <div class="input-group mb-3">
                 <input type="text" class="form-control"  ng-model="busqueda_prod" placeholder="Busqueda por Producto" aria-label="Busqueda por Producto" aria-describedby="basic-addon2">
                 <div class="input-group-append">
