--- a/app/comps/saldo/saldo.html
+++ b/app/comps/saldo/saldo.html
@@ -122,8 +122,9 @@
             <tr>
               <th scope="col"><p class="text-center">#</p></th>
               <th scope="col"><p class="text-center">Nombre de producto</p></th>
-              <th scope="col"><p class="text-center">Fecha vencimiento</p></th>
+              <th scope="col"><p class="text-center">Categoria</p></th>
               <th scope="col"><p class="text-center">Proveedor</p></th>
+              <th scope="col"><p class="text-center">Fecha vencimiento</p></th>
               <th scope="col"><p class="text-center">Principio activo</p></th>
               <th scope="col"><p class="text-center">Existencia</p></th>
             </tr>
@@ -133,8 +134,9 @@
             <tr ng-repeat="x in listaProd">
               <th scope="row">{{ $index + 1 }}</th>
               <td><p class="text-center">{{ x.nombre_producto }}</p></td>
-              <td><p class="text-center">{{ x.fecha_vence }}</p></td>
+              <td><p class="text-center">{{ x.categoria }}</p></td>
               <td><p class="text-center">{{ x.proveedor }}</p></td>
+              <td><p class="text-center">{{ x.fecha_vence }}</p></td>
               <td><p class="text-center">{{ x.princ_activo }}</p></td>
               <td><p class="text-center">{{ x.existencia }}</p></td>
 
