--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -1004,7 +1004,7 @@
                   <h5 class="card-title">Busqueda por cliente </h5>
 
                   <div class="form-check mb-3">
-                    <input class="form-check-input" type="radio" name="exampleRadios" ng-model="tipoBusquedaCliente" id="exampleRadios1" ng-value="0" >
+                    <input class="form-check-input" type="radio" name="exampleRadios" ng-model="tipoBusquedaCliente" id="exampleRadios1" ng-value="0" selected >
                     <label class="form-check-label" for="exampleRadios1">
                       Busqueda por cliente
                     </label>
