--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -97,6 +97,20 @@
             </div>
 
             <div class="col-sm-12 col-md-12 col-lg-12" ng-show="tabsIndex == 1" >
+              <div class="row" ng-if="!clienteEmpleado" >
+                <div class="form-check mb-3">
+                  <input class="form-check-input" type="radio" name="exampleRadios" ng-model="pickUpAvailable" id="exampleRadios1" ng-value="0" >
+                  <label class="form-check-label" for="exampleRadios1">
+                    Pedido normal
+                  </label>
+                </div>
+                <div class="form-check mb-3">
+                  <input class="form-check-input" type="radio" name="exampleRadios" ng-model="pickUpAvailable" id="exampleRadios2" ng-value="1" >
+                  <label class="form-check-label" for="exampleRadios2">
+                    Pedido Pick-Up
+                  </label>
+                </div>
+              </div>
 
               <div class="row mt-3 mb-5" >
                 <div class="col-6">
