--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -78,7 +78,7 @@
               <div class="col-sm-12 col-md-4 col-lg-4">
                 <div class="form-group">
                   <label>Fecha</label>
-                  <input type="date" ng-disabled="true" ng-model="pedido.fecha" class="form-control" placeholder="fecha">
+                  <!-- <input type="date" ng-disabled="true" ng-model="pedido.fecha" class="form-control" placeholder="fecha"> -->
                 </div>
               </div>
               <div class="col-sm-12 col-md-8 col-lg-8">
@@ -380,7 +380,7 @@
               <div class="col-sm-12 col-md-4 col-lg-4" style="display: none;">
                 <div class="form-group">
                   <label>Fecha</label>
-                  <input type="date" ng-disabled="true" ng-model="pedido.fecha" class="form-control" placeholder="fecha">
+                  <!-- <input type="date" ng-disabled="true" ng-model="pedido.fecha" class="form-control" placeholder="fecha"> -->
                 </div>
               </div>
               <div class="col-sm-12 col-md-12 col-lg-12">
