--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -866,7 +866,9 @@
 
               <div class="col-6">
                 <label>Cantidad</label>
-                <input type="number"  min="1" ng-model="articulo.CANTIDAD" class="form-control" placeholder="cantidad" onkeypress='return event.charCode >= 48 && event.charCode <= 57' >
+                <input type="number"  min="1" ng-model="articulo.CANTIDAD"
+                ng-keydown="$event.keyCode === 13 && addArtPedido(true)"
+                 class="form-control" placeholder="cantidad" onkeypress='return event.charCode >= 48 && event.charCode <= 57' >
               </div>
               <div class="col-6">
                 <div class="col-12">
