--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -99,13 +99,13 @@
             <div class="col-sm-12 col-md-12 col-lg-12" ng-show="tabsIndex == 1" >
               <div class="row" ng-if="!clienteEmpleado" >
                 <div class="form-check mb-3">
-                  <input class="form-check-input" type="radio" name="exampleRadios" ng-model="pickUpAvailable" id="exampleRadios1" ng-value="0" >
+                  <input class="form-check-input" type="radio" name="exampleRadios" ng-model="pickUpAvailable" id="exampleRadios1" ng-value="'N'" >
                   <label class="form-check-label" for="exampleRadios1">
                     Pedido normal
                   </label>
                 </div>
                 <div class="form-check mb-3">
-                  <input class="form-check-input" type="radio" name="exampleRadios" ng-model="pickUpAvailable" id="exampleRadios2" ng-value="1" >
+                  <input class="form-check-input" type="radio" name="exampleRadios" ng-model="pickUpAvailable" id="exampleRadios2" ng-value="'D'" >
                   <label class="form-check-label" for="exampleRadios2">
                     Pedido Pick-Up
                   </label>
