--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -97,7 +97,7 @@
             </div>
 
             <div class="col-sm-12 col-md-12 col-lg-12" ng-show="tabsIndex == 1" >
-              <div class="row" ng-if="!clienteEmpleado" >
+              <div class="row" ng-show="!clienteEmpleado" >
                 <label>Tipo de pedido</label>
                   <!--<input type="text" ng-model="user_view.role" class="form-control" placeholder="Tipo de usuario">-->
                   <select class="form-control form-control-sm"  ng-model="pickUpAvailable">
@@ -408,10 +408,10 @@
               <select class="form-control form-control-sm"  ng-model="pickUpAvailable">
 
                 <option selected value="1" selected >
-                  Pedido normal
+                 Normal
                 </option>
                 <option selected value="2">
-                  Pedido Pick-Up
+                  Pick-Up
                 </option>
 
               </select>
