--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -102,10 +102,10 @@
                   <!--<input type="text" ng-model="user_view.role" class="form-control" placeholder="Tipo de usuario">-->
                   <select class="form-control form-control-sm"  ng-model="pickUpAvailable">
 
-                    <option selected value="1" selected >
+                    <option selected value="1"  >
                       Pedido normal
                     </option>
-                    <option selected value="2">
+                    <option  value="2">
                       Pedido Pick-Up
                     </option>
 
@@ -407,10 +407,10 @@
               <!--<input type="text" ng-model="user_view.role" class="form-control" placeholder="Tipo de usuario">-->
               <select class="form-control form-control-sm"  ng-model="pickUpAvailable">
 
-                <option selected value="1" selected >
+                <option  value="1" selected >
                  Normal
                 </option>
-                <option selected value="2">
+                <option  value="2">
                   Pick-Up
                 </option>
 
