--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -405,6 +405,7 @@
 
               <label>Tipo de pedido</label>
               <!--<input type="text" ng-model="user_view.role" class="form-control" placeholder="Tipo de usuario">-->
+              {{pickUpAvailable}}
               <select class="form-control form-control-sm"  ng-model="pickUpAvailable">
 
                 <option  value="1" selected >
