--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -408,7 +408,7 @@
               {{pickUpAvailable}}
               <select class="form-control form-control-sm"  ng-model="pickUpAvailable">
 
-                <option  value="1" selected >
+                <option  value="1" >
                  Normal
                 </option>
                 <option  value="2">
