--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -102,7 +102,7 @@
                   <!--<input type="text" ng-model="user_view.role" class="form-control" placeholder="Tipo de usuario">-->
                   <select class="form-control form-control-sm"  ng-model="pickUpAvailable">
 
-                    <option selected value="1"  >
+                    <option  value="1"  >
                       Pedido normal
                     </option>
                     <option  value="2">
