--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -102,10 +102,10 @@
                   <!--<input type="text" ng-model="user_view.role" class="form-control" placeholder="Tipo de usuario">-->
                   <select class="form-control form-control-sm"  ng-model="pickUpAvailable">
 
-                    <option  value="'1'"  >
+                    <option  value="1"  >
                       Pedido normal
                     </option>
-                    <option  value="'2'">
+                    <option  value="2">
                       Pedido Pick-Up
                     </option>
 
