--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -889,7 +889,7 @@
 
               <div class="col-6">
                 <label>Cantidad</label>
-                <input type="number"  min="0" ng-model="articulo.CANTIDAD"
+                <input type="number"  ng-model="articulo.CANTIDAD"
                 ng-keydown="$event.keyCode === 13 && addArtPedido(true)"
                  class="form-control" placeholder="cantidad" onkeypress='return event.charCode >= 48 && event.charCode <= 57' >
               </div>
