--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -1106,6 +1106,14 @@
 
                   </div>
 
+                  <div class="alert alert-info alert-dismissible fade show"  role="alert">
+                    <strong><i class="fas fa-info-circle"></i></strong> Los pedidos creados en del portal web tienen un tiempo de vida inactivo maximo de 2 horas. Si su pedido se mantiene sin cambios durante este tiempo sera cancelado. 
+
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+
                   <div class="col-md-12">
 
                     <table class="table table-striped table-bordered"  datatable="ng" dt-options="dtOptions">
