--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -1106,8 +1106,8 @@
 
                   </div>
 
-                  <div class="alert alert-info alert-dismissible fade show"  role="alert">
-                    <strong><i class="fas fa-info-circle"></i></strong> Los pedidos creados en del portal web tienen un tiempo de vida inactivo maximo de 2 horas. Si su pedido se mantiene sin cambios durante este tiempo sera cancelado de forma automatica. 
+                  <div class="alert alert-warning alert-dismissible fade show"  role="alert">
+                    <strong><i class="fas fa-info-circle"></i></strong> Los pedidos que se encuentran en <strong>construcción</strong> tendrán un tiempo de vida máximo de <strong>dos (2) horas</strong>. Si usted no cierra el pedido dentro de ese intervalo de tiempo, este será <strong>cancelado</strong> y las unidades reservadas para los productos del pedido serán liberadas.
 
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
