--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -729,7 +729,7 @@
               <div class="row"   >
 
 
-                <label>Tipo de busqueda</label>
+                <label>Tipo de busqueda</label>{{tipoBusqueda}}
                 <select class="form-control form-control-sm"  ng-model="tipoBusqueda">
 
                   <option  value="1" >
