--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -58,7 +58,7 @@
 
             <div class="col-sm-12 col-md-12 col-lg-12" ng-show="tabsIndex == 0" >
               <!-- INFO CLIENTE -->
-              <header-client></header-client>
+              <!-- <header-client></header-client> -->
               <!--  END INFO CLIENTE -->
               <div ng-show="!hasUserClient">
 
@@ -378,7 +378,7 @@
           <form class="col-sm-12 col-md-12 col-lg-12">
 
           <div class="col-sm-12 col-md-12 col-lg-12" ng-show="tabsIndex == 0"  >
-            <header-client></header-client>
+            <!-- <header-client></header-client> -->
             <div ng-show="!hasUserClient">
 
               <div ng-if="clientIndex != null">
