--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -1085,7 +1085,7 @@
                   </div>
                   <div class="col-md-6">
 
-                    <button class="btn btn-primary" style="float: right; font-weight: bold;margin-bottom: 1rem;" ng-click="infoPsico = true;" ng-show="!infoPsico"  > <i class="fa fa-info"></i> Requisitos para Psicotropicos</button>
+                    <button class="btn btn-warning" style="float: left; font-weight: bold;margin-bottom: 1rem;" ng-click="infoPsico = true;" ng-show="!infoPsico"  > <i class="fa fa-info"></i> Requisitos para Psicotropicos</button>
                   </div>
 
 
