--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -694,18 +694,21 @@
 
               <div class="row"   >
 
+                <div class="col-md-4">
 
-                <label>Tipo de busqueda</label>{{tipoBusqueda}}
-                <select class="form-control form-control-sm"  ng-model="tipoBusqueda">
+                  <label>Tipo de busqueda</label>{{tipoBusqueda}}
+                  <select class="form-control form-control-sm"  ng-model="tipoBusqueda">
 
-                  <option  value="1" >
-                   Por producto
-                  </option>
-                  <option  value="2">
-                  Por componente activo
-                  </option>
+                    <option  value="1" >
+                      Por producto
+                    </option>
+                    <option  value="2">
+                      Por componente activo
+                    </option>
 
-                </select>
+                  </select>
+                </div>
+
               </div>
 
 
