--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -100,6 +100,18 @@
 
 
               <div class="row mt-3 mb-5" >
+
+                <div class="col-4">
+                  <label></label>
+                  <button type="button" class="btn btn-info" ng-click="addPedidoV2()" ng-show="ID == null"  >Abrir Pedido</button>
+                  <button type="button" class="btn btn-success"  ng-show="ID != null &&  counter < 600000" ng-click="openModalProducts()" >Agregar Productos</button>
+                </div>
+
+                <div class="col-4">
+                  <label></label>
+                  <button type="button"  class="btn btn-success" ng-click="openModalDyn(0,ID)" ng-show="ID != null" ng-disabled="pedido.pedido.length < 1 || !clienteValido" >Finalizar pedido</button>
+                </div>
+
                 <div class="col-4">
                   <div ng-show="!clienteEmpleado && ID != null" >
                     <label>Tipo de pedido</label>
@@ -115,16 +127,6 @@
 
                       </select>
                   </div>
-                </div>
-                <div class="col-4">
-                  <label></label>
-                  <button type="button" class="btn btn-info" ng-click="addPedidoV2()" ng-show="ID == null"  >Abrir Pedido</button>
-                  <button type="button" class="btn btn-success"  ng-show="ID != null &&  counter < 600000" ng-click="openModalProducts()" >Agregar Productos</button>
-                </div>
-
-                <div class="col-4">
-                  <label></label>
-                  <button type="button"  class="btn btn-success" ng-click="openModalDyn(0,ID)" ng-show="ID != null" ng-disabled="pedido.pedido.length < 1 || !clienteValido" >Finalizar pedido</button>
                 </div>
               </div>
 
@@ -408,6 +410,18 @@
 
             <div class="row mt-5 mb-5" ng-show="editView" >
 
+
+
+              <div class="col-4">
+                <label></label>
+                <button type="button" ng-show="editView" class="btn btn-info" ng-click="openModalProducts()">Agregar Productos</button>
+              </div>
+
+              <div class="col-4">
+                <label></label>
+                <button type="button"  class="btn btn-success" ng-show="editView && pedido.estatus_id < 2"  ng-disabled="pedido.pedido.length < 1 || !clienteValido"  ng-click="openModalDyn(0,ID)" >Finalizar pedido</button>
+              </div>
+
               <div class="col-4">
                 <div   ng-show="editView && !clienteEmpleado" >
 
@@ -424,16 +438,6 @@
 
                   </select>
                 </div>
-              </div>
-
-              <div class="col-4">
-                <label></label>
-                <button type="button" ng-show="editView" class="btn btn-info" ng-click="openModalProducts()">Agregar Productos</button>
-              </div>
-
-              <div class="col-4">
-                <label></label>
-                <button type="button"  class="btn btn-success" ng-show="editView && pedido.estatus_id < 2"  ng-disabled="pedido.pedido.length < 1 || !clienteValido"  ng-click="openModalDyn(0,ID)" >Finalizar pedido</button>
               </div>
 
               </div>
@@ -701,7 +705,7 @@
 
                 <div class="col-md-4">
 
-                  <label>Tipo de busqueda</label>{{tipoBusqueda}}
+                  <label>Tipo de busqueda</label>
                   <select class="form-control form-control-sm"  ng-model="tipoBusqueda">
 
                     <option  value="1" >
