--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="modal fade" id="addPedidoModal" tabindex="-1" role="dialog" aria-labelledby="addPedidoModalLabel" aria-hidden="true">
-  <div class="modal-dialog  mw-100 modal-90" role="document">
+  <div class="modal-dialog  mw-100  modal-90 modal-100-ht" role="document">
     <div class="modal-content">
       <div class="modal-header" style="background: #399CDF;color: white; font-weight: bold;">
         <h5 class="modal-title" id="addPedidoModalLabel">CREAR PEDIDO <i class="fas fa-1x fa-list-alt"></i></h5>
@@ -312,7 +312,7 @@
 
 <!-- Modal -->
 <div class="modal fade" id="showPedidoModal" tabindex="-1" role="dialog" aria-labelledby="showPedidoModalLabel" aria-hidden="true">
-  <div class="modal-dialog  mw-100 modal-90" role="document">
+  <div class="modal-dialog  mw-100  modal-90 modal-100-ht" role="document">
     <div class="modal-content">
       <div class="modal-header" style="background: #399CDF;color: white; font-weight: bold;">
         <h5 class="modal-title" id="addPedidoModalLabel">VER PEDIDO <i class="fas fa-1x fa-list-alt"></i></h5>
@@ -686,7 +686,7 @@
 </div>
 
 <div class="modal fade" id="modalproduct">
-  <div class="modal-dialog mw-100 modal-90">
+  <div class="modal-dialog mw-100  modal-90 modal-100-ht">
     <div class="modal-content">
       <div class="modal-header">
         <h4 class="modal-title">Productos</h4>
