--- a/app/comps/sidebar/sidebar.html
+++ b/app/comps/sidebar/sidebar.html
@@ -48,7 +48,7 @@
           Facturas
         </a>
       <li >
-        <a href="#!/login" class="">
+        <a data-toggle="modal" data-target="#modalConfirmSidebar" >
           <i class=" fa fa-fw  fa-times" ></i>
           Salir
         </a>
@@ -63,3 +63,30 @@
   <span class="hamb-middle"></span>
   <span class="hamb-bottom"></span>
 </button>
+
+<div class="modal fade" id="modalConfirmSidebar">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Confirmacion</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+
+      </div>
+      <div class="modal-body">
+
+        <div class="container">
+
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+              <h3><p class="text-center">Desea cerrar la session?</p></h3>
+          </div>
+
+        </div>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-info" data-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-danger" ng-click="salir()" data-dismiss="modal">Salir</button>
+      </div>
+    </div>
+  </div>
+</div>
