--- a/app/index.html
+++ b/app/index.html
@@ -72,7 +72,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-info" data-dismiss="modal">Cancelar</button>
-            <a href="/" data-dismiss="modal" >
+            <a href="#!/login" data-dismiss="modal" >
               <button type="button" class="btn btn-danger"  >Salir</button>
             </a>
           </div>
