--- a/app/comps/clientHeader/clientHeader.html
+++ b/app/comps/clientHeader/clientHeader.html
@@ -24,7 +24,7 @@
               <span aria-hidden="true">-</span>
             </button>
           </div>
-          <div class="card-body collapse" id="collapseInfo"  >
+          <div class="card-body " id="collapseInfo"  >
 
             <!-- <h6 class="card-title">Informacion del Cliente </h6> -->
             <p class="mb-1" ng-if="client_info.grupo_cliente != '02'" ><span class="text-muted">Razon Social: </span>{{client_info.nombre_cliente}}</p>
@@ -46,7 +46,7 @@
               <span aria-hidden="true">-</span>
             </button>
           </div>
-          <div class="card-body  collapse " id="collapseDetalle" >
+          <div class="card-body  " id="collapseDetalle" >
 
             <!-- <h6 class="card-title">Detalles del Cliente</h6> -->
             <p class="mb-1"><span class="text-muted"> Código {{ (client_info.grupo_cliente == "02") ?  "de empleado":"" }} </span> {{client_info.cod_cliente}}</p>
