--- a/app/index.html
+++ b/app/index.html
@@ -73,7 +73,7 @@
           <div class="modal-footer">
             <button type="button" class="btn btn-info" data-dismiss="modal">Cancelar</button>
             <a href="#!/login"  >
-              <button type="button" class="btn btn-danger"  data-dismiss="modal" >Salir</button>
+              <button type="button" class="btn btn-danger" >Salir</button>
             </a>
           </div>
         </div>
