--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -8,7 +8,7 @@
       <div class="modal-header" style="background: #399CDF;color: white; font-weight: bold;">
         <h5 class="modal-title" id="addPedidoModalLabel">CREAR PEDIDO <i class="fas fa-1x fa-list-alt"></i></h5>
 
-        <button type="button" class="close" data-dismiss="modal" ng-click="closeModalOrder();" aria-label="Close">
+        <button type="button" class="close" ng-click="closeModalOrder()" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
@@ -301,7 +301,7 @@
         </div>
       </div>
       <div class="modal-footer" style="display: block;margin: 0 auto;">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal" ng-click="closeModalOrder();">Regresar</button>
+        <button type="button" class="btn btn-secondary" ng-click="closeModalOrder()">Regresar</button>
         <button type="button"  class="btn btn-success" ng-click="openModalDyn(0,ID)" ng-show="ID != null" ng-disabled="pedido.pedido.length < 1 || !clienteValido" >Finalizar pedido</button>
 
 
@@ -316,7 +316,7 @@
     <div class="modal-content">
       <div class="modal-header" style="background: #399CDF;color: white; font-weight: bold;">
         <h5 class="modal-title" id="addPedidoModalLabel">VER PEDIDO <i class="fas fa-1x fa-list-alt"></i></h5>
-        <button type="button" class="close" data-dismiss="modal" ng-click="closeModalOrder();" aria-label="Close">
+        <button type="button" class="close" ng-click="closeModalOrder()" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
         <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal" ng-click="reset();">Regresar</button> -->
@@ -675,7 +675,7 @@
         </div>
       </div>
       <div class="modal-footer" style="display: block;margin: 0 auto;">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal" ng-click="closeModalOrder();">Regresar</button>
+        <button type="button" class="btn btn-secondary" ng-click="closeModalOrder()">Regresar</button>
         <button type="button"  class="btn btn-primary"  ng-if="userLogged.permisos.pedido.editar" ng-show="!editView && pedido.estatus_id < 3 "   ng-disabled="!clienteValido"  ng-click="editPedido();">Editar</button>
         <button type="button"  class="btn btn-success" ng-show="editView && pedido.estatus_id < 2"  ng-disabled="pedido.pedido.length < 1 || !clienteValido"  ng-click="openModalDyn(0,ID)" >Finalizar pedido</button>
 
