--- a/app/comps/home/home.html
+++ b/app/comps/home/home.html
@@ -5,7 +5,7 @@
 
   </div>
 
-  <div id="wrapper" class="toggled">
+  <div id="wrapper" class="toggled container">
 
     <my-sidebar></my-sidebar>
     <div  id="page-content-wrapper" class="container-fluid">
