--- a/app/comps/deuda/deuda.html
+++ b/app/comps/deuda/deuda.html
@@ -253,7 +253,7 @@
 
                           <th scope="col"><p class="text-center">Fecha </p></th>
                           <th scope="col"><p class="text-center">Fecha vencimiento</p></th>
-                          <th scope="col"><p class="text-center">Documento</p></th>
+                          <th scope="col"><p class="text-center">N° Documento</p></th>
                           <th scope="col"><p class="text-center">Saldo</p></th>
                           <!-- <th scope="col"><p class="text-center">N° de documento</p></th>
                             <th scope="col"><p class="text-center">Tipo venta</p></th>
